--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <header class="bg-white shadow-md">
         <nav class="container mx-auto px-6 py-3">
             <div class="flex justify-between items-center">
-                <div class="text-xl font-semibold text-gray-700">Budget Homes PVT LTD</div>
+                <div class="flex items-center space-x-4">
+                    <img src="./Image/logo.png" alt="Budget Homes Logo" class="h-12 w-12 object-contain">
+                    <div class="text-xl font-semibold text-red-700">Budget Homes PVT LTD</div>
+                </div>
+                
                 <div class="hidden md:flex space-x-4">
                     <a href="#" class="text-gray-600 hover:text-blue-500">Home</a>
                     <a href="#services" class="text-gray-600 hover:text-blue-500">Services</a>
