--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="container mx-auto px-6 py-3">
             <div class="flex justify-between items-center">
                 <div class="flex items-center space-x-4">
-                    <img src="./Image/logo.png" alt="Budget Homes Logo" class="h-12 w-12 object-contain">
+                    <img src="./image/logo.png" alt="Budget Homes Logo" class="h-12 w-12 object-contain">
                     <div class="text-xl font-semibold text-red-700">Budget Homes PVT LTD</div>
                 </div>
                 
