--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
                     <ul>
                         <li>Phone: +9779815698745</li>
-                        <li>Email: info@budgethomesprivate.com.np</li>
+                        <li>Email: info@budgethomesprivate.com</li>
                         <li>Address: Nagaun, Kathmandu, Nepal</li>
                     </ul>
                 </div>
